style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  list-style-type: none;
  text-decoration: none;
  font-family: "Cormorant Garamond", serif;
}

html {
  font-size: 62.5%;
  scroll-behavior: smooth;
}
.container {
  height: 100vh;
  width: 100vw;
  position: relative;
  overflow: hidden;
}
/* ----------------navigation-------------------- */

.navbar {
  position: fixed;
  left: 50%;
  transform: translateX(-50%);
  z-index: 100;
  max-width: 1440px;
  width: 100%;

  display: flex;
  justify-content: space-between;
  padding: 2rem;
  padding-bottom: 0;
  gap: 1rem;
}

.logo {
  width: 4rem;
}

.logo img {
  width: 100%;
  object-fit: cover;
}

.nav-list {
  width: 80%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.nav-link {
  width: 15rem;
  border: 0.1rem solid #fff;
  text-align: center;
  padding: 0.2rem 0;
  position: relative;
  overflow: hidden;
  cursor: pointer;
}

.nav-link::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 150%;
  height: 100%;
  background-color: #d50000;
  opacity: 0.8;

  transform: rotate(-40deg) translateX(-4rem);
  transform-origin: left bottom;
  transition: left 0.3s ease;
}

.nav-link:hover::before {
  left: 110%;
}

.nav-link a {
  font-size: 1.5rem;
  color: #fff;
  letter-spacing: 0.1rem;
}

/* ------------------Arrow buttons------------------- */

.arrow-btn {
  z-index: 100;
  position: fixed;
  top: 50%;
  background-color: #d50000;
  padding: 1rem;
  border-radius: 50%;
  border: none;
  opacity: 0.5;
  cursor: pointer;
  transition: opacity 0.3s ease;
}

.arrow-btn:hover {
  opacity: 1;
}

.arrow-btn i {
  font-size: 2rem;
  color: white;
}

.left-btn {
  left: 2rem;
}

.right-btn {
  right: 2rem;
}

/* ---------------- Pagination section --------------- */

.page-indicator {
  z-index: 100;
  position: fixed;
  bottom: 2%;
  left: 3%;
  width: 100px;
  height: 66px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}
.page-indicator p,
.page-indicator p span {
  font-size: 2rem;
  color: white;
  font-family: bold;
}

.pagination-dots {
  display: flex;
  gap: 4px;
}

.pagination-dots .dot {
  width: 1rem;
  height: 1rem;
  border: solid 1px white;
  border-radius: 50%;
}

.dot-5 {
  background-color: white;
}

/* --------------------------------------------------- */

section {
  width: 100vw;
  height: 100%;
  position: absolute;
  transition: all 1s ease;
}

/* ----------------_Section_1-------------------- */

.section-1 {
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)),
    url(images/section-1-bg.jpg) center no-repeat;
  background-size: cover;
}

.section-1-heading {
  font-size: 6rem;
  max-width: 80%;
  width: 100%;
  font-weight: 300;
  color: #fff;
  letter-spacing: 1px;
  border-bottom: solid 2px #d50000;
  text-align: right;
  user-select: none;

  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* -----------------_Section-2_------------------ */

.section-2 {
  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)),
    url(images/section-2-bg.jpg) center no-repeat;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

/* SALES */

.sale-container {
  width: 80%;
  margin: auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 4rem;
  padding: 2rem;
}

@media (max-width: 1024px) {
  .sale-container {
    flex-direction: column-reverse;
    gap: 15rem;
  }
}

.sale {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: fit-content;
}

.sale img {
  width: 50%;
  min-width: 18rem;
}

.wine-bottle {
  width: 50%;
  min-width: 32rem;
}

.order-btn {
  font-size: 2rem;
  font-weight: 300;
  letter-spacing: 0.1rem;
  background-color: transparent;
  color: #fff;
  border: 0.1rem solid #fff;
  transition: background-color 0.2s;
  margin-top: 4rem;
  padding: 5px 14px;
}

.order-btn:hover {
  background-color: #d50000;
}

/* -----------------_Section-3_------------------ */

.section-3 {
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)),
    url(images/section-3-bg.jpg) center no-repeat;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
}

.section-3-heading {
  font-size: 20rem;
  color: white;
  transform: rotate(-20deg);
  text-align: center;
  transition: 0.4s ease;
  z-index: 2;
  opacity: 0.9;
  user-select: none;
}

@media (max-width: 980px) {
  .section-3-heading {
    font-size: 14rem;
  }
}

@media (max-width: 640px), (max-height: 640px) {
  .section-3-heading {
    font-size: 10rem;
  }
}

.frame-img {
  width: 66%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  opacity: 0.5;
}

.grapes-img {
  max-width: 33%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  opacity: 0.7;
}

/* -----------------_Section-4_------------------ */

.section-4 {
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.blurred-bg {
  position: absolute;
  inset: 0;
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)),
    url(images/section-4-bg.jpg) center no-repeat;
  background-size: cover;
  filter: blur(3px);
}

.section-4-heading {
  font-size: 10rem;
  font-weight: 300;
  text-align: center;
  margin-bottom: 7rem;
  color: #d50000;
  user-select: none;
  z-index: 1;
}

@media (max-width: 980px) {
  .section-4-heading {
    font-size: 8rem;
  }
}

@media (max-width: 640px), (max-height: 640px) {
  .section-4-heading {
    font-size: 6rem;
  }
}

.frame-container {
  width: 50%;
  min-width: 50rem;
  border: solid white 1px;
  padding: 1rem;
  z-index: 1;
  background: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.3),
    rgba(0, 0, 0, 0.9)
  );
}

.frame-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  opacity: 0.9;
}

/* -----------------_Section-5_------------------ */

.section-5 {
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3)),
    url(images/section-5-bg.jpg) center no-repeat;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 10rem;
}

footer {
  max-width: 1440px;
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: 4rem;
}

.left-side,
.right-side {
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  gap: 2rem;
  background-color: rgba(0, 0, 0, 0.2);
  border: 6px;
}

footer ul li {
  font-size: 2rem;
  font-weight: 700;
  letter-spacing: 0.1rem;
  color: #ddd;
  border-bottom: solid #d5000034 1px;
  padding-bottom: 0.5rem;
}

.middle img {
  width: 100%;
}

@media (max-width: 1080px) {
  footer {
    flex-direction: column;
  }
}

.copyright {
  position: absolute;
  bottom: 2rem;
  font-size: 2rem;
  font-weight: 600;
  text-align: center;
  color: white;
  letter-spacing: 0.2rem;
}

.section-1 {
  z-index: 0;
}
.section-2 {
  z-index: 0;
}
.section-3 {
  z-index: 0;
}
.section-4 {
  z-index: 1;
}
.section-5 {
  z-index: 0;
}

